--- a/TcpServerTesting/TcpServerTesting.csproj
+++ b/TcpServerTesting/TcpServerTesting.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <Authors>JB Stepan</Authors>
+    <PackageId>JBChat Server</PackageId>
+    <Product>JBChat Server</Product>
+    <RootNamespace>JBChatServer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
